tests/golden/type_errors/contextual_lambda_return_value_conflict.cd
let f: fun(number): number = fun (x) {
  return "bad";
};
